# aiTool

./: README.md  pyproject.toml  requirements.txt
examples/: quickstart.py  sample_article.txt
src/llm_toolkit/: __init__.py  chat.py  cli.py  client.py  config.py  extract.py  summarize.py
tests/: test_config.py  test_extract.py
