[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-text-toolkit"
version = "0.1.0"
description = "A small, batteries-included toolkit for building LLM-powered text apps."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "you@example.com" }]
keywords = ["llm", "ai", "anthropic", "claude", "nlp", "cli"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "python-dotenv>=1.0",
]

[project.scripts]
llm-toolkit = "llm_toolkit.cli:main"

[project.urls]
Homepage = "https://github.com/your-username/llm-text-toolkit"
Issues = "https://github.com/your-username/llm-text-toolkit/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
